--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -60,27 +60,28 @@
   font-weight: 500;
 }
 
-.cart{
-    position: relative;
+.cart {
+  position: relative;
+  cursor: pointer;
 }
 
-.counter{
-    position: absolute;
-    top: -10px;
-    right: -10px;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background-color: white;
-    padding: 3px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    color: #d1411e;
+.counter {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: white;
+  padding: 3px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  color: #d1411e;
 }
 
-@media screen and (max-width:480px) {
+@media screen and (max-width: 480px) {
   .item:nth-child(2) {
     display: none;
   }
