--- a/styles/Order.module.css
+++ b/styles/Order.module.css
@@ -83,7 +83,7 @@
 
 @media screen and (max-width: 480px) {
   .container {
-    flex-direction: column;
+    flex-direction: row;
   }
 
   .trTitle {
@@ -92,7 +92,6 @@
 
   .tr {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     font-size: 20px;
@@ -116,7 +115,7 @@
   }
 
   .row:last-child {
-    width: 100%;
+    width: 70%;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -128,7 +127,7 @@
     margin-bottom: 20px;
   }
 
-  .wrapper{
+  .wrapper {
     width: 100%;
   }
 }
